# StageD

./: CMakeLists.txt  README.md
api/: log.h  typedefs.h
release/osx/: staged
staged/: CMakeLists.txt  main.cpp
staged-core/: CMakeLists.txt  test.cpp  test.h
